...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="q32-N4-IfX">
                                <rect key="frame" x="16" y="20" width="343" height="639"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="xY0-cf-nNU">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="62.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="displayField">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="52"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hpm-m3-ewK">
                                        <rect key="frame" x="0.0" y="66.5" width="343" height="20.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="inputSequenceField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="zsz-wu-h9N">
                                        <rect key="frame" x="0.0" y="91" width="343" height="548"/>
...
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqN-kW-HaF">
                                                        <rect key="frame" x="69" y="0.0" width="67.5" height="90.5"/>
                                                        <color key="backgroundColor" red="0.57647058823529407" green="0.6705882352941176" blue="0.74901960784313726" alpha="1" colorSpace="calibratedRGB"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                        <state key="normal" title="x²">
                                                            <color key="titleColor" red="0.1960784314" green="0.23529411759999999" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="performOperation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c2f-j6-mib"/>
                                                        </connections>
                                                    </button>
...
                                                <rect key="frame" x="0.0" y="91.5" width="343" height="90.5"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fgk-vJ-Tbl">
                                                        <rect key="frame" x="0.0" y="0.0" width="68" height="90.5"/>
                                                        <color key="backgroundColor" red="0.57647058823529407" green="0.6705882352941176" blue="0.74901960784313726" alpha="1" colorSpace="calibratedRGB"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                        <state key="normal" title="sin">
                                                            <color key="titleColor" red="0.1960784314" green="0.23529411759999999" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="performOperation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KKV-cO-e7V"/>
                                                        </connections>
                                                    </button>
...
